--- a/coolfittedclient/src/main/webapp/WEB-INF/web.xml
+++ b/coolfittedclient/src/main/webapp/WEB-INF/web.xml
@@ -47,4 +47,7 @@
     	<servlet-name>StrapClientServlet</servlet-name>
     	<url-pattern>/straps</url-pattern>
     </servlet-mapping>
+    <welcome-file-list>
+        <welcome-file>home</welcome-file>
+    </welcome-file-list>
 </web-app>
