finilized full interaction, confirmation page shows up, 6/14

--- a/coolfittedclient/.classpath
+++ b/coolfittedclient/.classpath
@@ -30,5 +30,14 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/arca/Downloads/jstl-1.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/arca/Downloads/mysql-connector-java-5.1.42-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/arca/Downloads/httpcomponents-client-4.5.3/lib/commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/arca/Downloads/httpcomponents-client-4.5.3/lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/arca/Downloads/httpcomponents-client-4.5.3/lib/fluent-hc-4.5.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/arca/Downloads/httpcomponents-client-4.5.3/lib/httpclient-cache-4.5.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/arca/Downloads/httpcomponents-client-4.5.3/lib/httpcore-4.4.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/arca/Downloads/httpcomponents-client-4.5.3/lib/httpmime-4.5.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/arca/Downloads/httpcomponents-client-4.5.3/lib/jna-4.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/arca/Downloads/httpcomponents-client-4.5.3/lib/jna-platform-4.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/arca/Downloads/httpcomponents-client-4.5.3/lib/httpclient-4.5.3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
